# kage

./: .gitignore  .periphery.yml  LICENSE  Makefile  Podfile  README.md
.cargo/: config.toml
android/: .editorconfig  build.gradle.kts  lint-baseline.xml  settings.gradle.kts
android/app/: build.gradle.kts  lint-baseline.xml
android/app/src/androidTest/java/kafva/kage/: ExampleInstrumentedTest.kt
android/app/src/androidTest/kotlin/kafva/kage/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/kafva/kage/: Age.kt  G.kt  Git.kt  KageApplication.kt  KageCore.kt  Log.kt  MainActivity.kt
android/app/src/main/kotlin/kafva/kage/: Age.kt  Git.kt  KageApplication.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/kafva/kage/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/src/debug/kotlin/kafva/kage/: Log.kt
android/src/debug/kotlin/one/kafva/kage/: Log.kt
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/kafva/kage/: G.kt  Log.kt  MainActivity.kt
android/src/main/kotlin/kafva/kage/data/: AgeRepository.kt  AppRepository.kt  AppViewModel.kt  GitRepository.kt  HistoryViewModel.kt  PasswordViewModel.kt  PwNode.kt  RuntimeSettingsRepository.kt  SettingsRepository.kt  ToolbarViewModel.kt  TreeViewModel.kt
android/src/main/kotlin/kafva/kage/di/: AppContextModule.kt
android/src/main/kotlin/kafva/kage/jni/: Age.kt  Git.kt
android/src/main/kotlin/kafva/kage/models/: AppViewModel.kt  HistoryViewModel.kt  (+4 more)
android/src/main/res/drawable/: collapse_all.xml  expand_all.xml  family_history.xml  folder.xml  linked_services.xml  lock.xml  lock_open_right.xml  my_location.xml  server.xml  settings_backup_restore.xml
android/src/main/res/values/: colors.xml  strings.xml  themes.xml  version.xml
android/src/main/res/values-sv/: strings.xml
android/src/release/kotlin/kafva/kage/: Log.kt
android/tools/: genkey  genkey.sh  setversion.sh
core/: .android.mk  .ios.mk  .rustfmt.toml  Cargo.toml  Makefile  abuild.sh  build.rs  build.sh
core/.cargo/: config.toml
core/src/: age.rs  age_error.rs  age_ffi.rs  age_jni.rs  age_test.rs  ffi.rs  git.rs  git_ffi.rs  git_jni.rs  git_test.rs  jni.rs  lib.rs  log.rs  log_android.rs  util.rs
core/src/cmd/: kage.rs
ios/: AddView.swift  Age.swift  AppError.swift  AppState.swift  AppView.swift  Config.swift  ContentView.swift  G.swift  Git.swift  Globals.swift  NewPasswordView.swift  PwNode.swift  SettingsView.swift  Util.swift  ffiApi.swift  kageApp.swift  kageTests.xctestplan  rustApi.swift
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Assets.xcassets/ErrorColor.colorset/: Contents.json
ios/extensions/: FileManager.swift  String.swift  URL.swift
ios/kage.xcodeproj/: project.pbxproj
ios/kage.xcodeproj/xcshareddata/xcschemes/: kage.xcscheme  kageTests.xcscheme
ios/kageUITests/: kageUITests.swift  kageUITestsLaunchTests.swift
ios/models/: AppError.swift  PwNode.swift
ios/src/: Age.swift  AppState.swift  Const.swift  DeviceLogger.swift  ErrorTileView.swift  G.swift  Git.swift  Info.plist  PwManager.swift  kageApp.swift
ios/src/extensions/: EnvironmentValues.swift  FileManager.swift  ScenePhase.swift  String.swift  URL.swift  View.swift
ios/src/locale/: Localizable.xcstrings
ios/src/types/: AppError.swift  CommitInfo.swift  PwNode.swift
ios/src/views/: AppView.swift  AuthenticationView.swift  ErrorTileView.swift  ErrorView.swift  HistoryView.swift  MessageView.swift  PasswordView.swift  PlaintextView.swift  PwNodeView.swift  SearchView.swift  SettingsView.swift  TileView.swift  TreeView.swift
ios/tests/: kageTests.swift
ios/tools/: setversion.sh
ios/views/: AppView.swift  AuthenticationView.swift  HistoryView.swift  MessageView.swift  NewFolderView.swift  NewPasswordView.swift  PlaintextView.swift  PwNodeTreeView.swift  PwNodeView.swift  SearchView.swift  SettingsView.swift  TreeView.swift
kage-core/: Cargo.toml  build.sh
kage-core/src/: age.rs  age_error.rs  age_ffi.rs  git.rs  git_ffi.rs  git_test.rs  lib.rs  log.rs
kage.xcodeproj/: project.pbxproj
pw/: Cargo.toml
scripts/: build-core.sh  gpg-migrate.sh  gpg2age  ip-auth  serverdevel.sh
tools/: ip-auth  mkrelease  repoinit  serverdevel  serverdevel.sh  setversion.sh
(+81 files in other folders)
