[package]
name = "kage-core"
version = "0.1.0"
edition = "2021"
authors = ["Kafva"]

[lib]
name = "kage_core"
# XXX: The crate-type needs to be manually set:
# https://github.com/rust-lang/cargo/issues/12260
#   iOS: staticlib
#   Android: dylib


[package.metadata]
# Use stable channel, the curve25519-dalek dependency fails to build with the
# nightly toolchain:
#   error[E0658]: use of unstable library feature 'stdsimd'
# https://github.com/dalek-cryptography/curve25519-dalek/pull/619#issuecomment-1931198286
rust = "1.75.0"

[dependencies]
zeroize = "1.7.0"

# To maintain state inside of the library
once_cell = "1.19.0"

# With support for the ASCII armored format
age = { version = "0.10.0", features = ["armor"] }

# libgit2 depends on:
#    - libiconv2
#    - libz
# Text-Based Stub Libraries (.tbd) need to be included for these in Xcode:
#   Build Phases > Link Binary with Libraries
# Without https/ssh support
[target.'cfg(not(target_os = "android"))'.dependencies]
git2 = { version = "0.19.0", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
# Build with vendored libgit2 for Android
git2 = { version = "0.19.0", default-features = false, features = ["vendored-libgit2"] }
jni = { version = "0.21.1" }

[features]
default = ["debug_logs"]
color_logs = []
debug_logs = []
