[package]
name = "kage-core"
version = "0.2.0"
edition = "2021"
authors = ["Kafva"]

[lib]
name = "kage_core"
# XXX: The crate-type needs to be manually set:
# https://github.com/rust-lang/cargo/issues/12260
#   iOS: staticlib
#   Android: dylib

[package.metadata]
rust = "1.86.0"

[dependencies]
zeroize = "1.7.0"

# With support for the ASCII armored format
age = { version = "0.11.1", features = ["armor"] }

# libgit2 depends on:
#    - libiconv2
#    - libz
# Text-Based Stub Libraries (.tbd) need to be included for these in Xcode:
#   Build Phases > Link Binary with Libraries
# Without https/ssh support
[target.'cfg(not(target_os = "android"))'.dependencies]
git2 = { version = "0.20.1", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
# Build with vendored libgit2 for Android
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
jni = { version = "0.21.1" }

[features]
default = ["debug_logs"]
# The ffi library for iOS only works when built with --release, debug logs
# therefore need their own feature flag, we cannot rely on cfg(debug_assertions)
debug_logs = []
