[package]
name = "kage-core"
version = "0.1.0"
edition = "2021"
authors = [ "Kafva" ]

[lib]
crate-type = ["cdylib"]
name = "kage_core"

[dependencies]
age = "0.9.2"
# Without https/ssh support
git2 = { version = "0.18.1", default-features = false}
derive_more = { version = "0.99.17", features = ["from", "display"] }
