[package]
name = "kage-core"
version = "0.1.0"
edition = "2021"
authors = [ "Kafva" ]

[lib]
crate-type = ["cdylib"]
name = "kage_core"

[dependencies]
zeroize = "1.7.0"
# With support for the ASCII armored format
age = { version = "0.10.0", features = ["armor"] }
# Without https/ssh support
git2 = { version = "0.18.1", default-features = false}

